--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ header {
     background-color: rgb(86, 86, 86, 0.7);;
     color: white;
     padding: 10px;
+    max-height: 40px; 
     text-align: center;
 }
 
@@ -80,6 +81,7 @@ footer {
     padding: 10px;
     position: fixed;
     width: 100%;
+    max-height: 40px; 
     bottom: 0;
 }
 
